src/app/client/client.component.sass
.wrapper
    // background: rgb(132,1,7)
    // background: radial-gradient(circle, rgba(132,1,7,1) 6%, rgba(223,0,10,1) 25%, rgba(70,0,26,1) 64%)
    display: flex
    justify-content: center
    .container
        width: 100%
        .header
            position: absolute
            z-index: 1
            top: 0
            background-color: #FFFFFF
            width: 100%
            color: #243346
        .content
            // margin-top: 150px
        .footer
            background-color: #0F0E6A
            width: 100%
            color: #243346
@media (max-width: 600px) 
    .wrapper
        width: 100%

